added attributes method to get ingredients

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header>
+		<%= render "layouts/nav" %>
+	</header>
 
-<%= yield %>
+
+	<%= yield %>
 
 </body>
 </html>
