added search function and some styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,3 +37,12 @@ body {
 #main {
 	text-align: center;
 }
+
+.navbar {
+	background: #F2F2F2;
+	border-bottom: solid 1px #B6B6B6;
+}
+
+.dropdown {
+	padding-top: 1%;
+}
