--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,13 +15,25 @@
         <ul class="nav navbar-nav">
           <% if user_signed_in? %>
             <li><%= link_to "Hello #{current_user.email}", user_path(current_user) %></li>
-            <li><%= link_to "Sign Out", destroy_user_session_path, method: "DELETE" %></li>
           <% else %>
             <li><%= link_to "Sign In", new_user_session_path %></li>
             <li><%= link_to "Sign Up", new_user_registration_path %></li> 
           <% end %>
          <!--  nav here -->
         </ul>
+        <div class="dropdown nav navbar-right">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Menu
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><%= link_to "Recipes", recipes_path %></li>
+            <li><%= link_to "Add Recipe", new_recipe_path %></li>
+            <li><%= link_to "Edit Profile", edit_registration_path(current_user) if user_signed_in?%></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Sign Out", destroy_user_session_path, method: "DELETE" if user_signed_in? %></li>
+          </ul>
+        </div>  
       </div><!--/.nav-collapse -->
     </div>
   </div>
