--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,34 +1,58 @@
 <div class='container' >
-	<h2><%= @recipe.name %></h2><br>
-	<strong>Description:</strong><br>
-	<p><%= @recipe.description %></p>
-	<strong>Ingredients:</strong>
-	<ul>
-		<% @recipe.recipe_ingredients.each do |ingredient| %>
-			<li><%= ingredient.measurement %>  <%= ingredient.name.humanize %></li>
-		<% end %>
-	</ul>
-	<strong>Directions:</strong>
-	<ol>
-		<% @recipe.directions_to_list.each do |direction| %>
-			<li><%= direction.capitalize %></li>
-		<% end %>
-	</ol>
+	<div class='container' id='comment'>
+		<h2 class="title"><%= @recipe.name %></h2> by 
+			<%= link_to @recipe.user.email, user_path(@recipe.user.id) %> 
+			<p>posted on: <%= post_date(@recipe) %></p>
+		<p></p>
+		<strong>Description:</strong><br>
+		
+		<p><%= @recipe.description %></p>
+		<strong>Ingredients:</strong>
+		
+		<ul>
+			<% @recipe.recipe_ingredients.each do |ingredient| %>
+				<li><%= ingredient.measurement %>  <%= ingredient.name.humanize %></li>
+			<% end %>
+		</ul>
+		
+		<strong>Directions:</strong>
+		
+		<ol>
+			<% @recipe.directions_to_list.each do |direction| %>
+				<li><%= direction.capitalize %></li>
+			<% end %>
+		</ol>
+	</div>
 </div>
 
+
+
 <div class="container">
-	<% @recipe.try(:comments).each do |comment| %>
-		<strong><%= comment.commenter.email %></strong><br>
-		<%= comment.content %>
+	<% unless @recipe.comments.empty? %>
+		<strong>Comments:</strong>
+	
+		<% @recipe.comments.each do |comment| %>
+			<div class="container" id="comment">
+				<strong><%= link_to comment.commenter.email, user_path(comment) %></strong> 
+					posted on: <%= post_date(comment) %><br>
+				<p><%= comment.content %></p>
+			</div>
+		<% end %>
 	<% end %>
 </div>
 
-<div class="container">
-	<%= form_for @recipe.comments.build, action: comments_path, method: 'post' do |f| %>
-		<%= f.hidden_field :recipe_id, value: @recipe.id %>
-		<%= f.hidden_field :commenter_id, value: current_user.id %>
-		<%= f.label "Add a comment" %>
-		<%= f.text_area :content, cols: 60, rows: 10 %>
-		<%= f.submit %>
-	<% end %>
+<div class="container" >
+	<strong>Make a comment:</strong>
+	
+	<div class="container" id="comment">
+		<%= form_for @recipe.comments.build, action: comments_path, method: 'post' do |f| %>
+			<%= f.hidden_field :recipe_id, value: @recipe.id %>
+			<% if user_signed_in? %>
+				<%= f.hidden_field :commenter_id, value: current_user.id %>
+			<% end %>
+			<%= f.label "Add a comment" %>
+			<%= f.text_area :content, cols: 55, rows: 8, class: "button3" %>
+			<%= f.submit class: "button3" %>
+		<% end %>
+	</div>
 </div>
