--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
+	
 	<h2>Search:</h2>
 	
 	<%= form_tag recipes_path, method: 'get' do %>
-		<%= text_field_tag :search, nil, class: "button3", placeholder: "enter recipe name here" %>
+		<%= text_field_tag :search, nil, class: "button3", placeholder: "enter recipe name here" %><br>
 		<%= submit_tag 'Search Recipes', class: "button3" %>
 	<% end %>
+	<p><%= link_to "other search options", search_path %></p>
 
 </div>
 <div class="container">
