--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,18 +1,41 @@
-<div class="container">
-	
-	<h2>Search:</h2>
-	
-	<%= form_tag recipes_path, method: 'get' do %>
-		<%= text_field_tag :search, nil, class: "button3", placeholder: "enter recipe name here" %><br>
-		<%= submit_tag 'Search Recipes', class: "button3" %>
-	<% end %>
-	<p><%= link_to "other search options", search_path %></p>
-
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h2>Search:</h2>
+	</div>
+	<div class="panel-body">
+		<%= form_tag recipes_path, method: 'get' do %>
+			<%= text_field_tag :search, nil, class: "form-control comment", placeholder: "enter recipe name here" %><br>
+			<%= submit_tag 'Search Recipes', class: "btn btn-primary" %>
+		<% end %>
+		<p></p>
+		<p><%= link_to "other search options", search_path %></p>
+	</div>
 </div>
-<div class="container">
-	<h2>Recipes:</h2>
- 	<% @recipes.each do |recipe| %>
-	 	<p><%= link_to recipe.name, recipe_path(recipe) %></p>
-	 	<p><%= recipe.try(:rating) %></p>
+
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h2>Recipes:</h2>
+	</div>
+	<% if !@recipes.empty? %>
+		<div class="panel-body">
+		 	<% @recipes.each do |recipe| %>
+		 		<div class="panel panel-default comment">		
+				 	<div class="panel-heading">
+					 	<p><strong><%= link_to recipe.name.titleize, recipe_path(recipe) %></strong> by
+					 	 	<%= link_to recipe.user_name, user_path(recipe.user) %></p>
+					</div>
+					<div class="panel-body">
+						<p>posted on: <%= post_date(recipe) %></p>
+					 	<p><%= "Rating: #{recipe.rating_avg}" if recipe.try(:rating_avg) %></p>
+					 	<p><%= link_to "edit", edit_recipe_path(recipe), class: "btn btn-default btn-xs" if can? :update, recipe %>
+					 		<%= link_to "delete", recipe_path(recipe), method: "DELETE", class: "btn btn-default btn-xs" if can? :destroy, recipe %></p>
+					</div>
+				</div>
+			<% end %>
+		</div>
+	<% else %>
+		<div class="panel-body">
+			no recipes to display
+		</div>
 	<% end %>
 </div>
