--- a/app/views/recipes/search.html.erb
+++ b/app/views/recipes/search.html.erb
@@ -1,27 +1,39 @@
-<div class="container">
-	<h2>Other search options:</h2>
-
-	<strong>Search by ingredient:</strong>
-	<%= form_tag search_path, method: "get" do %>
-		<%= text_field_tag :ingredient, nil, class: "button3", placeholder: "ingredient" %><br>
-		<%= submit_tag 'Submit', class: "button3" %>
-	<% end %>
-
-	- or -<br>
-
-
-	<strong>Search by rating:</strong>
-	<%= form_tag search_path, method: "get" do %>
-		<%= text_field_tag :ingredient, nil, class: "button3", placeholder: "rating (1-5)" %><br>
-		<%= submit_tag 'Submit', class: "button3" %>
-	<% end %>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h2>Other search options:</h2>
+	</div>
+	<div class="panel-body">
+		<strong>Search by ingredient:</strong>
+		<p></p>
+		<%= form_tag search_path, method: "get" do %>
+			<%= text_field_tag :ingredient, nil, class: "form-control comment", placeholder: "ingredient" %><br>
+			<%= submit_tag 'Submit', class: "btn btn-primary" %>
+		<% end %>
+		<p></p>
+		<%= link_to "Browse Ingredients", ingredients_path %><br>
+	
+		<div class="container">- or -</div>
+		<strong>Search by rating:</strong>
+		<p></p>
+		<%= form_tag search_path, method: "get" do %>
+			<%= text_field_tag :rating, nil, class: "form-control comment", placeholder: "rating (1-5)" %><br>
+			<%= submit_tag 'Submit', class: "btn btn-primary" %>
+		<% end %>
+	</div>
 </div>
 
-<div class="container">
-	<h2>Recipes:</h2>
- 	<% @results.try(:each) do |recipe| %>
-	 	<p><%= link_to recipe.name, recipe_path(recipe) %></p>
-	 	<p><%= recipe.try(:rating) %></p>
-	<% end %>
-</div>
+<% if !@results.blank? %>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Recipes:</h2>
+		</div>
+	 	<% @results.each do |recipe| %>
+		 	<div class="panel-body">
+			 	<p><%= link_to recipe.name, recipe_path(recipe) %></p>
+			 	<p><%= recipe.try(:rating) %></p>
+			</div>
+		<% end %>
+	</div>
+<% end %>
+
 
