--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,17 @@
-<div class="container">
-	<h2><%= @user.email %></h2>
-
-	<strong>Recipes:</strong>
-
-	<% if !@user.recipes.empty? %>
-		<% @user.recipes.each do |recipe| %>
-			<p><%= link_to recipe.name, recipe_path(recipe) %></p>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h2><%= @user.email_name %>'s profile</h2>
+	</div>
+	<div class="panel-body">
+		<strong><%= link_to "Recipes", user_recipes_path(@user), class: "btn btn-link" %></strong>
+		<p></p>
+		<strong><%= link_to "Comments", user_comments_path(@user), class: "btn btn-link" %></strong>
+		<p></p>
+		<%= form_tag comments_path, method: 'get' do %>
+			<%= hidden_field_tag :commenter_id, @user.id %>
+			<strong><%= submit_tag "Reviews", class: "btn btn-link" %></strong>
 		<% end %>
-	<% else %>
-		<p><%= @user.email %> has no recipes listed yet!</p>
-	<% end %>
+	</div>
+
 
 </div>
