--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,16 @@
 	<h1>Welcome to Tummy Topics!</h1>
 	<p>Here you can list your favorite recipes and see what others have to say about them!</p>
 </div>
-<div class="container">
-
-</div>
+<% unless user_signed_in? %>
+	<div id='main' class="container">
+		<%= link_to "Sign In", new_user_session_path, class: "btn btn-primary btn-xs" %>
+	</div>
+	<p></p>
+	<div id='main' class="container">
+		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-xs" %>
+	</div>
+	<p></p>
+	<div id='main' class="container">
+		<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), class: "btn btn-primary btn-xs"%>
+	</div>
+<% end %>
