--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -8,7 +8,7 @@
 			<h2>Comments:</h2>	
 		<% end %>
 	</div>
-	<% if !@comments.empty? || !@reviews.empty? %>
+	<% if !@comments.blank? || !@reviews.blank? %>
 
 		<%= render partial: 'display', locals: { comments: @comments } %>
 
