--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="panel-body">
 		<% @ingredients.each do |ingredient| %>
 			<div class="container" id="display" >
-				<%= link_to ingredient.name.humanize, ingredient_path(ingredient) %>
+				<%= link_to titleize(ingredient), ingredient_path(ingredient) %>
 			</div>
 		<% end %>
 	</div>
