--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -21,7 +21,7 @@
 		 	<% @recipes.each do |recipe| %>
 		 		<div class="panel panel-default comment">		
 				 	<div class="panel-heading">
-					 	<p><strong><%= link_to recipe.name.titleize, recipe_path(recipe) %></strong> by
+					 	<p><strong><%= link_to titleize(recipe), recipe_path(recipe) %></strong> by
 					 	 	<%= link_to recipe.user_name, user_path(recipe.user) %></p>
 					</div>
 					<div class="panel-body">
