--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <div class='panel panel-default' >
 	<div class="panel-heading">
-		<h2><%= @recipe.name.titleize %></h2> 
+		<h2><%= titleize(@recipe) %></h2> 
 	</div>
 		<div class='panel-body' > 
 			by <%= link_to @recipe.user.email_name, user_path(@recipe.user.id) %> 
@@ -35,7 +35,7 @@
 			<div class="panel-body">
 				<ul>
 					<% @recipe.recipe_ingredients.each do |ingredient| %>
-						<li><%= ingredient.measurement %>  <%= ingredient.name.humanize %></li>
+						<li><%= ingredient.measurement %>  <%= titleize(ingredient) %></li>
 					<% end %>
 				</ul>
 			</div>
