working on new features

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -6,3 +6,7 @@
 		<%= render partial: 'form', locals: { recipe: @recipe } %>
 	</div>
 </div>
+
+<script id="ingredient-template" type="text/x-handlebars-template">
+	<%= render 'ingredients/fields' %>
+</script>
