added ability to add and delete comment asynchronously

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,14 +10,14 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  //= depend_on_asset "bootstrap/glyphicons-halflings-regular.eot"
  //= depend_on_asset "bootstrap/glyphicons-halflings-regular.woff"
  //= depend_on_asset "bootstrap/glyphicons-halflings-regular.ttf"
  //= depend_on_asset "bootstrap/glyphicons-halflings-regular.svg"
  */
+@import "bootstrap-sprockets";
 @import "bootstrap";
+
 /* Some Style from the Bootstrap Default Theme */
 body {
   padding-top: 70px;
@@ -75,7 +75,6 @@ textarea {
   margin:5px 0;
   padding:3px;
 }
-
 
 #notice {
   color: green;
