--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,6 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 </head>
 <body>
@@ -15,11 +13,9 @@
 	</header>
 
 	<div class="container">
-		<% flash.each do |key, value| %>
-    	<%= content_tag(:div, class: flash_class(key)) do %>
-    		<%= value %>
-    	<% end %>
-  	<% end %>
+
+		<%= flash_messages %>
+		
 		
 		<%= yield %>
 	</div>
