modified frontend functionality

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,4 +1,6 @@
 html = '<%= j (render "comment", comment: @comment) %>'
 
-$('div#comment_form').before(html)
-$('#new_comment')[0].reset()
+$('div#comment_form').before(html);
+$('#new_comment')[0].reset();
+
+
