--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,12 +1,3 @@
-<% flash.each do |key, value| %>
- <%= content_tag(:div, class: "alert alert-#{key} alert-dismissable") do %>
-  <%= value %>
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;<button>   
- <% end %> 
-<% end %>
-
-
-
 <div class='panel panel-default' >
 	<div class="panel-heading">
 		<h2><%= titleize(@recipe) %></h2> 
@@ -84,11 +75,14 @@
 			<div class="form-group">
 				<%= f.label "Add a comment" %>
 				<%= f.text_area :content, cols: 55, rows: 5, class: "form-control" %>
+				<span class="help-block"></span>
 			</div>
 			<%= f.submit class: "btn btn-primary" %>
 		<% end %>
 	</div>
 </div>
+
+
 
 
 
