--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,12 @@ body {
 	text-align: center;
 }
 
+.shadow {
+  -webkit-box-shadow: 5px 4px 5px 0px rgba(189,197,199,1);
+  -moz-box-shadow: 5px 4px 5px 0px rgba(189,197,199,1);
+  box-shadow: 5px 4px 5px 0px rgba(189,197,199,1);
+}
+
 .navbar {
 	background: #F2F2F2;
 	border-bottom: solid 1px #B6B6B6;
