--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,154 +17,10 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "themes/form";
+@import "themes/bootstrap_themes";
 
 
-/* Some Style from the Bootstrap Default Theme */
-body {
-  padding-top: 70px;
-  padding-bottom: 30px;
-}
-
-.theme-dropdown .dropdown-menu {
-  position: static;
-  display: block;
-  margin-bottom: 20px;
-}
-
-.theme-showcase > p > .btn {
-  margin: 5px 0;
-}
-
-#main {
-	text-align: center;
-}
-
-.shadow {
-  -webkit-box-shadow: 5px 4px 5px 0px rgba(189,197,199,1);
-  -moz-box-shadow: 5px 4px 5px 0px rgba(189,197,199,1);
-  box-shadow: 5px 4px 5px 0px rgba(189,197,199,1);
-}
-
-.navbar {
-	background: #F2F2F2;
-	border-bottom: solid 1px #B6B6B6;
-}
-
-.dropdown {
-	padding-top: 1%;
-}
-
-.comment {
-  width: 40%;
-}
-
-.measurement {
-  width: 15%;
-}
-
-.form {
-  width: 70%;
-}
-
-#display {
-	border-radius: 10px;
-	background: #f5f5f5;
-	width: 40%;
-	margin: 1%;
-	padding: 1%;
-	box-shadow: 1px 1px 1px 1px #ddd;
-}
 
 
-textarea {
-  border:1px solid #999999;
-  width:100%;
-  margin:5px 0;
-  padding:3px;
-}
 
-#notice {
-  color: green;
-}
-
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
-  }
-
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
-}
-
-.ui-autocomplete {
-position: absolute;
-top: 100%;
-left: 0;
-z-index: 1000;
-float: left;
-display: none;
-min-width: 160px;   
-padding: 4px 0;
-margin: 0 0 10px 25px;
-list-style: none;
-background-color: #ffffff;
-border-color: #ccc;
-border-color: rgba(0, 0, 0, 0.2);
-border-style: solid;
-border-width: 1px;
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
--webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
--moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
--webkit-background-clip: padding-box;
--moz-background-clip: padding;
-background-clip: padding-box;
-*border-right-width: 2px;
-*border-bottom-width: 2px;
-
-}
-
-.ui-menu-item > a.ui-corner-all {
-    display: block;
-    padding: 3px 15px;
-    clear: both;
-    font-weight: normal;
-    line-height: 18px;
-    color: #555555;
-    white-space: nowrap;
-    text-decoration: none;
-}
-
-.ui-state-hover, .ui-state-active {
-    color: #ffffff;
-    text-decoration: none;
-    background-color: #0088cc;
-    border-radius: 0px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    background-image: none;
-}
