--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,19 +1,30 @@
 
 <%= form_for recipe do |f| %>
 
-	<div class="form-group">
-		<%= f.label 'Recipe Name:' %><br>
-		<%= f.text_field :name, class: "form-control" %><br>
+	<div class="form-group <%= 'has-error' if recipe.errors[:name].any? %>">
+		<%= f.label 'Recipe Name:', class: "control-label" %><br>
+		<%= f.text_field :name, class: "form-control" %>
+		<% if recipe.errors[:name].any? %>
+			<span class="help-block"><%= recipe.errors.full_messages_for(:name).to_sentence %></span>
+		<% end %>
 	</div>
 
-	<div class="form-group">
-		<%= f.label 'Description:' %><br>
-		<%= f.text_area :description,  cols: 55, rows: 10, class: "form-control" %><br>
+	<div class="form-group <%= 'has-error' if recipe.errors[:description].any? %>">
+		<%= f.label 'Description:', class: "control-label" %><br>
+		<%= f.text_area :description,  cols: 55, rows: 10, class: "form-control" %>
+		<% if recipe.errors[:description].any? %>
+			<span class="help-block"><%= recipe.errors.full_messages_for(:description).to_sentence %></span>
+		<% end %>
 	</div>
 	
 	<div class="panel panel-default">	
 		<div class="panel-heading"><%= f.label 'Ingredients:' %></div>
 		<div class="panel-body">
+			<% if recipe.errors[:ingredients].any? %>
+				<div class="form-group has-error" >
+					<span class="help-block"><%= recipe.errors.full_messages_for(:ingredients).to_sentence %></span>
+				</div>
+			<% end %>
 			<%= f.fields_for :ingredients_attributes do |ingredients| %>
 				<%= render 'ingredients/fields', ingredients: ingredients %>
 			<% end %>
@@ -25,9 +36,12 @@
 		<button class='btn btn-primary' id='button' data-url="/recipes/ingredients/new">add another ingredient</button>
 	</div>
 	
-	<div class="form-group">
-		<%= f.label 'Directions:' %><br>
-		<%= f.text_area :directions,  cols: 55, rows: 10, placeholder: "Please put each step on a separate line", class: "form-control" %><br>
+	<div class="form-group <%= 'has-error' if recipe.errors[:directions].any? %>">
+		<%= f.label 'Directions:', class: "control-label"  %><br>
+		<%= f.text_area :directions,  cols: 55, rows: 10, placeholder: "Please put each step on a separate line", class: "form-control" %>
+		<% if recipe.errors[:directions].any? %>
+			<span class="help-block"><%= recipe.errors.full_messages_for(:directions).to_sentence %></span>
+		<% end %>
 	</div>
 
 	<div>
