--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,11 +20,7 @@
 @import "themes/form";
 @import "themes/bootstrap_themes";
 @import "themes/comment_styles";
-
-.comment_box {
-  @extend .col-md-4;
-}
-
+@import "ratings"
 
 
 
